--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Deriving the matching type}\label{sec:deriving-matching}
+\chapter{Deriving the matching type}\label{ch:deriving-matching}
 
 Matching languages can be summarizes as in Table \ref{tbl:overview-rel-light-polish}.
 
@@ -446,12 +446,16 @@ I continue with the morpheme \tit{o}. I propose that \tit{o} spells out the feat
     \cmidrule{2-3}
     \tsc{nom} & kto       & c-o        \\
     \tsc{acc} & k-o-go    & c-o        \\
-    \tsc{gen} & k-o-go    & cz-e-go    \\
+    \tsc{gen} & k-o-go    & cz-    \\
     \tsc{dat} & k-o-mu    & cz-e-mu    \\
     \bottomrule
   \end{tabular}
   \label{tbl:pol-rels}
 \end{table}
+
+%there is also kim and czym
+%k automatically softens to k' before y, which apparently goes even further in the wh-words? p.15
+%k is a primary consonant, c and cz are not. they are derived. k is primary with respect to c and cz p.23
 
 The animate and the inanimate combine with the same suffix in the genitive and the dative. They differ, however, in the initial consonant and the following vowel. The animate form starts with a \tit{k} and has the \tit{o} as a vowel, and the inanimate form starts with a \tit{cz} and has the \tit{e} as a vowel. In Polish, the consonant \tit{k} is replaced by a \tit{cz} when it is followed by an \tit{e} \pgcitep{swan2002}{24}.\footnote{
 I assume that the change from \tsc{c} to \tit{cz} is palatalization as a consequence of the combination of /t͡s/ and /ɛ/ \pgcitep{swan2002}{26}.
@@ -1114,7 +1118,7 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
   \center
   \begin{tabular}[b]{c}
         \toprule
-        \tsc{acc} extra light head \tit{e-go} \\
+        \tsc{acc} extra light head \tit{} \\
         \cmidrule{1-1}
         \small{
         \begin{forest} boom
@@ -1257,7 +1261,7 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
   \center
   \begin{tabular}[b]{c}
         \toprule
-        \tsc{acc} extra light head \tit{e-go} \\
+        \tsc{acc} extra light head \tit{o-go} \\
         \cmidrule{1-1}
         \small{
         \begin{forest} boom
@@ -1413,7 +1417,7 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
   \center
   \begin{tabular}[b]{c}
         \toprule
-        \tsc{dat} extra light head \tit{e-mu} \\
+        \tsc{dat} extra light head \tit{o-mu} \\
         \cmidrule{1-1}
         \small{
         \begin{forest} boom
