--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -1,7 +1,7 @@
 % !TEX root = thesis.tex
 
 
-\chapter{Deriving the unrestricted type}\label{sec:deriving-nonmatching}
+\chapter{Deriving the unrestricted type}\label{ch:deriving-nonmatching}
 
 Unrestricted languages can be summarizes as in Table \ref{tbl:overview-rel-light-ohg}.
 
