--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -1,7 +1,7 @@
 % !TEX root = thesis.tex
 
 
-\chapter{Deriving the internal-only type}\label{sec:deriving-only-internal}
+\chapter{Deriving the internal-only type}\label{ch:deriving-onlyinternal}
 
 Internal-only languages can be summarizes as in Table \ref{tbl:overview-rel-light-mg}.
 
@@ -21,7 +21,7 @@ internal-only   & relative pronoun\scsub{int} & *  & Modern German    \\
 A language of the internal-only type (like Modern German) allows only the internal case to surface when it wins the case competition. This means that the relative pronoun with its internal case can be the surface pronoun. A language of this type does not allow the external case to surface when it wins the case competition. This means that the light head with its external case cannot be the surface pronoun. The goal of this section is to derive these properties from the way light heads and relative pronouns are spelled out in Modern German.
 
 The section is structured as follows.
-First, I discuss the relative pronoun. According to my assumptions in Section \ref{sec:basic-idea}, relative pronouns are part of the relative clause. I confirm this independently for Modern German with data from extraposition. I decompose the relative pronouns into three morphemes, and I show which features each of the morphemes corresponds to.
+First, I discuss the relative pronoun. According to my assumptions in Section \ref{ch:constituent-containment}, relative pronouns are part of the relative clause. I confirm this independently for Modern German with data from extraposition. I decompose the relative pronouns into three morphemes, and I show which features each of the morphemes corresponds to.
 Then I discuss the light head. I argue that Modern German headless relatives are derived from a light-headed relative clause that does not surface in the language. I show that the light head corresponds to one of the morphemes of the relative pronoun.
 Finally, I compare the constituents of the light head and the relative pronoun.
 When the internal and the external case match, the relative pronoun can delete the light head, because it contains all its constituents.
@@ -88,7 +88,7 @@ Jan has what eaten he cooked has\\
 
 In conclusion, extraposition facts show that the surface pronoun in Modern German headless relatives is the relative pronoun.
 
-Now I turn to the internal structure of the relative pronoun. In Section \ref{sec:basic-idea} I gave the structure in \ref{ex:mg-simplified-rel} as a simplified representation of the relative pronoun.
+Now I turn to the internal structure of the relative pronoun. In Section \ref{ch:constituent-containment} I gave the structure in \ref{ex:mg-simplified-rel} as a simplified representation of the relative pronoun.
 
 \ex.\label{ex:mg-simplified-rel}
 \begin{forest} boom
@@ -107,7 +107,7 @@ Now I turn to the internal structure of the relative pronoun. In Section \ref{se
 
 In what follows, I give the non-simplified representation. It is important to carefully establish the feature content of the relative pronoun. This constituents that it forms are namely determining whether the relative pronoun can delete the light head or not. Moreover, the features that I introduce for Modern German are present in the same way in the other two language types.
 
-I discuss two relative pronouns: the animate nominative singular and in the animate accusative singular. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-mg}. I show them in \ref{ex:mg-rels}.
+I discuss two relative pronouns: the animate nominative singular and the animate accusative singular. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-mg}. I show them in \ref{ex:mg-rels}.
 
 \ex.\label{ex:mg-rels}
 \ag. w-e-r\\
@@ -118,7 +118,7 @@ I discuss two relative pronouns: the animate nominative singular and in the anim
 I decompose the relative pronouns in three morphemes: the \tit{w}, the \tit{e} and the final consonant. For each morpheme, I discuss which features they spell out, and I give their lexical entries. In the end, I derive the relative pronouns, given here in \ref{ex:mg-spellout-rel-nom-preview} and \ref{ex:mg-spellout-rel-acc-preview}.
 
 \ex.\label{ex:mg-spellout-rel-nom-preview}
-\scriptsize{
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=12mm
       [\tsc{rel}P,
@@ -176,10 +176,10 @@ I decompose the relative pronouns in three morphemes: the \tit{w}, the \tit{e} a
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 \ex.\label{ex:mg-spellout-rel-acc-preview}
-\scriptsize{
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=12mm
       [\tsc{rel}P,
@@ -240,7 +240,7 @@ I decompose the relative pronouns in three morphemes: the \tit{w}, the \tit{e} a
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 I continue with the final consonants: \tit{r} and \tit{n}. They can be observed in several contexts besides relative pronouns. Table \ref{tbl:mg-dieser} gives an overview of the demonstrative \tit{dieser} `this' in Modern German in two numbers, three genders and three cases.\footnote{
 The vowel preceding the final consonant is written as \tit{e}. I write it as \tit{ə}, because this is how it is pronounced. I make this distinction to emphasize that this differs from the vowel used in the relative pronouns.
@@ -281,6 +281,16 @@ Table \ref{tbl:mg-dieser} and \ref{tbl:mg-paradigm-wh-rels} show that the final 
 
 Another context in which this consonant appears is in their use as a pronoun. More specifically, the final consonant corresponds to the weak pronoun in Modern German, which I illustrate in the following examples. I only give examples of the nominative and accusative masculine singular, because these are the forms used in the relative pronoun.
 
+\ex.
+\ag. Hat r das schon gemacht?\\
+ has he.\tsc{wk} that already done\\
+ `Did he already do that?'
+\bg. Ich wollte n gestern schon anrufen.\\
+ I wanted him.\tsc{wk} yesterday already call\\
+ `I wanted to call him already yesterday.'
+
+In the literature, pronouns have been split into three classes: strong, weak, clitic. Let me see what class these consonants represent. The tests I use are taken from  XXXX.
+
 First, I show that the consonant is not a strong pronoun.
 The example in \ref{ex:wk-pron-coord} illustrates this by showing that the weak pronoun cannot be coordinated.
 
@@ -288,7 +298,7 @@ The example in \ref{ex:wk-pron-coord} illustrates this by showing that the weak 
 \ag. Jan und er/ *r essen gerne Dampfnudeln.\\
  Jan und he.\tsc{str}/ he.\tsc{wk} eat {with pleasure} \tit{Dampfnudeln}\\
  `Jan and he like to eat \tit{Dampfnudeln}.'
-\bg. Ich habe Jan und ihn/ n gesehen.\\
+\bg. Ich habe Jan und ihn/ *n gesehen.\\
  I have Jan and him.\tsc{str}/ him.\tsc{wk} seen\\
  `I saw Jan and him.'
 
@@ -298,7 +308,7 @@ The example in \ref{ex:wk-pron-focus} illustrates the same point by showing that
 \ag. Nur er/ *r isst gerne Saumagen.\\
  only he.\tsc{str}/ he.\tsc{wk} eats {with pleasure} \tit{Saumagen}\\
  `Only he likes \tit{Saumagen}'
-\bg. Ich habe nur ihn/*n gesehen.\\
+\bg. Ich habe nur ihn/ *n gesehen.\\
  I have only him.\tsc{str}/ him.\tsc{wk} seen\\
  `I saw only him.'
 
@@ -329,9 +339,13 @@ I have a nice letter to him.\tsc{wk} written\\
 I am fast on him.\tsc{wk} to walked\\
 `I walked toward him fast.'
 
-In sum, besides gender, number and case features, the final consonant of relative pronoun spell out pronominal features.
+In sum, besides gender, number and case features, the final consonants of relative pronoun can be used as weak pronouns.
 
-Since I discuss the animate nominative singular and in the animate accusative singular, I only introduce features that are realized by these morphemes.
+say that the vowel is residue
+
+now we are done with segmentation, let me turn to the actual features.
+
+Since I discuss the animate nominative singular and the animate accusative singular, I only introduce features that are realized by these morphemes.
 For case, I adopt the features of \citet{caha2009}, already introduced in Chapter \ref{ch:decomposition}. The feature \ac{f}1 corresponds to the nominative, and the features \ac{f}1 and \ac{f}2 correspond to the accusative.
 
 For number and gender, I adopt the features that are distinguished by \citet{harley2002} for pronouns. The feature \tsc{cl} corresponds to a gender feature, which is inanimate or neuter if it is not combined with any other features. Combining \tsc{cl} with the feature \tsc{an} gives the animate or masculine gender.\footnote{
@@ -397,7 +411,21 @@ Note that the ordering of the features here is not random. I motivate this later
 
 This leaves the \tit{e} in the relative pronoun. This morpheme is present in elements such as demonstratives and (\tsc{wh}-)relative pronouns. It spells out gender and number features and features regarding deixis. I start with the deixis features. In relative pronouns it does not express spatial deixis, but discourse deixis: it establishes a relation with an antecedent.
 
-I assume that the \tsc{wh}-relative pronoun combines with the medial or the distal (when distinguishing between proximal, medial and distal). English has morphological evidence for this claim. Demonstratives in English can combine with either the proximal (\tit{this}) or this medial/distal (\tit{that}). \tsc{wh}-pronouns combine with the medial/distal (\tit{what}) and are ungrammatical when combined with the proximal (*\tit{whis}).
+Generally, three types of deixis are distinguished: proximal, medial and distal. I argue that \tit{e} in the relative pronoun corresponds to the medial. Generally speaking, \tsc{wh}-pronouns combine with the medial or the distal. English has morphological evidence for this claim. Demonstratives in English can combine with either the proximal or this medial/distal, as shown in \ref{ex:english-dem}.
+
+\ex.\label{ex:english-dem}
+ \ag. this\\
+ \tsc{dem}.\tsc{prox}\\
+ \bg. that\\
+ \tsc{dem}.\tsc{med/dist}\\
+
+\tsc{wh}-pronouns combine with the medial/distal and are ungrammatical when combined with the proximal, shown in \ref{ex:english-wh}.
+
+\ex.\label{ex:english-wh}
+ \ag. *whis\\
+ \tsc{wh}.\tsc{prox}\\
+ \bg. what\\
+ \tsc{wh}.\tsc{med/dist}\\
 
 The use of the medial in \tsc{wh}-pronouns can be understood conceptually if one connects spatial deixis to discourse deixis \citep[cf.][]{colasanti2019}. The proximal is spatially near the speaker, and it refers to knowledge that the speaker possesses. The medial is spatially near the hearer, and it refers to knowledge that the hearer possesses. The distal is spatially away from the speaker and the hearer, and refers to knowledge that neither of them possess. In \tsc{wh}-pronouns, the speaker is not aware of the knowledge, so the use of the proximal is excluded. Since I do not have explicit evidence for the presence of the distal, I assume that it is the medial that combines with the \tsc{wh}-pronoun.
 
@@ -441,6 +469,7 @@ So, in sum:
   \label{ex:mg-entry-e}
 \end{forest}
 
+%an alternative way of looking at it: \tit{er} is the lexical entry for \tsc{ref} etc, but only has a slot for a single consonant. STRONG is the lexical entry for deixis etc, and it has space for a vowel too.
 
 This leaves the morpheme \tit{w} of the relative pronoun. Compare Table \ref{tbl:mg-paradigm-wh-rels-rep} (repeated from Table \ref{tbl:mg-paradigm-wh-rels}) and Table \ref{tbl:mg-paradigm-dem}. The \tit{w} combines with the same endings as the \tit{d} does in demonstratives (or relative pronouns in headed relatives).\footnote{
 Note here that the \tsc{wh}-relative pronouns, unlike the demonstratives, do not have a feminine form for the relative pronouns in Table \ref{tbl:mg-paradigm-wh-rels-rep}. Demonstratives also have plural forms (which are not given here), and \tsc{wh}-relative pronouns do not. As far as I know, this holds for all relative pronouns in languages of the internal-only type (cf. also for Finnish, even though it makes a lot of morphological distinctions) and of the matching type. Relative pronouns in languages of the unrestricted type do inflect for feminine, as well as always-external languages. In Chapter \ref{ch:discussion} I return to this observation in relation with the always-external languages.
@@ -461,6 +490,8 @@ Note here that the \tsc{wh}-relative pronouns, unlike the demonstratives, do not
  \label{tbl:mg-paradigm-wh-rels-rep}
 \end{table}
 
+
+
 \begin{table}[H]
 \center
 \caption {Modern German demonstrative pronouns \pgcitep{durrell2011}{5.4.1}} %dieser source
@@ -479,13 +510,7 @@ Note here that the \tsc{wh}-relative pronouns, unlike the demonstratives, do not
 This identifies the \tit{d} and, more importantly for the discussion here, the \tit{w} as a separate morpheme. Three features that \tit{w} spells out are important for the discussion here.
 
 The first feature I refer to as \tsc{wh}. This is a feature that \tsc{wh}-pronouns, such as \tsc{wh}-relative pronouns and interrogatives, share. The \tsc{wh}-element triggers the construction of a set of alternatives in the sense of \citet{rooth1985,rooth1992} \citep{hachem2015}. This contrasts with the \tsc{d} in Table \ref{tbl:mg-paradigm-dem}, which is responsible for establishing a definite reference.
-
-The second relevant feature is \tsc{rel}, which establishes a relation. A language that overtly shows that \tsc{wh}-relative pronouns consist of two features is Hungarian. \ref{ex:hungarian-rel-wh} gives three examples of \tsc{wh}-pronouns that combine with the marker \tit{a} to become a \tsc{wh}-relative pronoun.
-
-\exg. a-mi, a-ki, a-melyik \\
- \tsc{rel}-what \tsc{rel}-who \tsc{rel}-which\\
- \flushfill{Kenesei et al. 1998: 40}\label{ex:hungarian-rel-wh}
-
+The second relevant feature is \tsc{rel}, which establishes a relation.
 The third feature is \tsc{dx}\scsub{2}.. \tsc{wh}-element + `away from the speaker'
 
 In sum, the \tit{w} spells out the features \tsc{wh} and \tsc{rel}, shown in \ref{ex:mg-entry-w}.
@@ -502,7 +527,7 @@ In sum, the \tit{w} spells out the features \tsc{wh} and \tsc{rel}, shown in \re
 \end{forest}\label{ex:mg-entry-w}
 
 At this point, I gave lexical entries for each of the morphemes (in \ref{ex:mg-entry-r}, \ref{ex:mg-entry-n}, \ref{ex:mg-entry-e} and \ref{ex:mg-entry-w})
-and I showed what the relative pronouns as a whole look like (in \ref{ex:mg-structure-rel-nom} and \ref{ex:mg-structure-rel-acc}).
+and I showed what the relative pronouns as a whole look like (in \ref{ex:mg-spellout-rel-nom-preview} and \ref{ex:mg-spellout-rel-acc-preview}).
 What is still needed, is a theory for combining these morphemes into a relative pronoun. This theory should determine which morphemes should be combined with each other in which order. Ideally, the theory is not language-specific, but the same for all languages. In what follows I show how this is accomplished in Nanosyntax. Readers who are not interested in the precise mechanics can proceed directly to Section \ref{sec:light-mg}.
 
 
@@ -550,6 +575,10 @@ The way Nanosyntax combines different morphemes is not by glueing them together 
 Starting from the bottom, these are pronominal features (\tsc{ref} and Σ), deixis features (\tsc{dx}\scsub{1} and \tsc{dx}\scsub{2}), gender features (\tsc{cl} and \tsc{an}), number features (\tsc{ind}), operator features (\tsc{wh} and \tsc{rel}) and case features (\ac{f}1 and \ac{f}2). This order is independently supported by work in the literature. Both Picallo and Kramer argue that number is hierarchically higher than gender. Case is agreed to be higher than number (cf. Bittner and Hale).
 
 \tsc{ref}, Σ, \tsc{deix}, \tsc{wh/rel}?
+
+of those children
+of which children
+K > deix/wh
 
 Before I derive construct the relative pronouns, I explain how the spellout procedure in Nanosyntax works. Features (Fs) are merged one by one according to the functional sequence, starting from the bottom. After each instance of merge, the constructed phrase must be spelled out, as stated in \ref{ex:cyclic-phrasal-spellout}.
 
@@ -881,7 +910,7 @@ The next feature in the functional sequence is the feature \tsc{dx}\scsub{2}. As
 
 \ex.\label{ex:mg-spellout-medp-phrasal}
 \begin{forest} boom
-  [\tsc{med}P
+  [\tsc{med}P, s sep=12mm
       [\tsc{dx}\scsub{2}]
       [\tsc{prox}P
           [\tsc{prox}P,
@@ -978,6 +1007,7 @@ In the case of \ref{ex:mg-dx2-2x}, the spellout of \tsc{dx}\scsub{2} is successf
 This syntactic structure namely forms a constituent in the lexical tree in \ref{ex:mg-entry-e-rep}, which corresponds to the \tit{e}. As spellout has succeeded, the workspaces can be merged back together. The result is shown in \ref{ex:mg-spellout-medp-inspec}.
 
 \ex.\label{ex:mg-spellout-medp-inspec}
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
   [\tsc{med}P
       [\tsc{med}P,
@@ -1017,6 +1047,7 @@ This syntactic structure namely forms a constituent in the lexical tree in \ref{
       ]
   ]
 \end{forest}
+\end{adjustbox}
 
 The next feature on the functional sequence is \tsc{wh}. The derivation for \tsc{wh} resembles the derivation of \tsc{dx}\scsub{1}.
 The feature is merged with the existing syntactic structure, creating a \tsc{wh}P.
@@ -1038,6 +1069,7 @@ This syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-e
 Therefore, the \tsc{wh}P is spelled out as \tit{w}, and \tsc{wh}P is merged back to the existing syntactic structure, as shown in \ref{ex:mg-spellout-whp}.
 
 \ex.\label{ex:mg-spellout-whp}
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
   [\tsc{wh}P
       [\tsc{wh}P,
@@ -1089,6 +1121,7 @@ Therefore, the \tsc{wh}P is spelled out as \tit{w}, and \tsc{wh}P is merged back
       ]
   ]
 \end{forest}
+\end{adjustbox}
 
 The next feature on the functional sequence is \tsc{rel}. The derivation for \tsc{rel} resembles the derivation of \tsc{dx}\scsub{2}.
 The feature is merged with the existing syntactic structure, creating a \tsc{rel}P.
@@ -1099,6 +1132,7 @@ It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-w-rep}, wh
 The \tsc{rel}P is spelled out as \tit{w}, and the \tsc{rel}P is merged back to the existing syntactic structure, as shown in \ref{ex:mg-spellout-relp}.
 
 \ex.\label{ex:mg-spellout-relp}
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
   [\tsc{rel}P
       [\tsc{rel}P,
@@ -1153,6 +1187,7 @@ The \tsc{rel}P is spelled out as \tit{w}, and the \tsc{rel}P is merged back to t
       ]
   ]
 \end{forest}
+\end{adjustbox}
 
 For the nominative relative pronoun, the last feature on the functional sequence is the feature \tsc{f}1. This feature should somehow end up merging with \tsc{ind}P, because it forms a constituent in the lexical tree in \ref{ex:mg-entry-r-rep}, which corresponds to the \tit{r}. This is achieved via two instances of Backtracking in which phrases are split up. I go through the derivation step by step.
 
@@ -1167,7 +1202,7 @@ It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-r-rep}, wh
 The \tsc{nom}P is spelled out as \tit{r}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-nom}.
 
 \ex.\label{ex:mg-spellout-rel-nom}
-\scriptsize{
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=12mm
       [\tsc{rel}P,
@@ -1183,21 +1218,18 @@ The \tsc{nom}P is spelled out as \tit{r}, and all constituents are merged back i
               [\tsc{dx}\scsub{2}]
           ]
       ]
-      [\tsc{med}P, s sep=21mm
+      [\tsc{med}P, s sep=40mm
           [\tsc{med}P,
           tikz={
           \node[label=below:\tit{e},
           draw,circle,
-          scale=0.85,
+          scale=0.95,
           fit to=tree]{};
           }
               [\tsc{dx}\scsub{2}]
               [\tsc{prox}P
                   [\tsc{dx}\scsub{1}]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
-                      [\tsc{an}]
-                  ]
+                  [\tsc{ind}]
               ]
           ]
           [\tsc{nom}P,
@@ -1225,7 +1257,7 @@ The \tsc{nom}P is spelled out as \tit{r}, and all constituents are merged back i
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 For the accusative relative pronoun, one more feature is merged: the \tsc{f}2. The derivation for \tsc{f}2 resembles the derivation of \tsc{f}1. The feature is merged with the existing syntactic structure, creating a \tsc{acc}P.
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
@@ -1263,7 +1295,7 @@ It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, re
 The \tsc{acc}P is spelled out as \tit{n}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-nom}.
 
 \ex.\label{ex:mg-spellout-rel-acc}
-\scriptsize{
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=12mm
       [\tsc{rel}P,
@@ -1279,21 +1311,18 @@ The \tsc{acc}P is spelled out as \tit{n}, and all constituents are merged back i
               [\tsc{dx}\scsub{2}]
           ]
       ]
-      [\tsc{med}P, s sep=23mm
+      [\tsc{med}P, s sep=40mm
           [\tsc{med}P,
           tikz={
           \node[label=below:\tit{e},
           draw,circle,
-          scale=0.85,
+          scale=0.95,
           fit to=tree]{};
           }
               [\tsc{dx}\scsub{2}]
               [\tsc{prox}P
                   [\tsc{dx}\scsub{1}]
-                  [\tsc{ind}P
-                      [\tsc{ind}]
-                      [\tsc{an}]
-                  ]
+                  [\tsc{ind}P]
               ]
           ]
           [\tsc{acc}P,
@@ -1324,17 +1353,19 @@ The \tsc{acc}P is spelled out as \tit{n}, and all constituents are merged back i
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 To summarize, I decomposed the relative pronoun into the three morphemes \tit{w}, \tit{e} and the final consonant (\tit{r} and \tit{n}). I showed which features each of the morphemes spells out, and in which constituents the features are combined. It is these constituency that determine whether the relative pronoun can delete the light head or not.
 
 \section{The (extra) light head}\label{sec:light-mg}
 
-In Section \ref{sec:basic-idea}, I argued that headless relatives are derived from light-headed relatives. The relative pronoun can delete the light head when the relative contains all constituents of the light head. I suggested that this holds in Modern German, as long as the external case is not more complex than the internal case. In the previous section, I gave the internal structure of the relative pronoun, i.e. which constituents the relative pronoun consists of. In this section, I first need to identify the light head, as it does not surface in headless relatives. Then I show what its internal structure looks like: it is a constituent within the relative pronoun.
+In Section \ref{ch:constituent-containment}, I argued that headless relatives are derived from light-headed relatives. The relative pronoun can delete the light head when the relative contains all constituents of the light head. I suggested that this holds in Modern German, as long as the external case is not more complex than the internal case. In the previous section, I gave the internal structure of the relative pronoun, i.e. which constituents the relative pronoun consists of. In this section, I first need to identify the light head, as it does not surface in headless relatives. Then I show what its internal structure looks like: it is a constituent within the relative pronoun.
 
 In this section, I consider two kinds of light-headed relatives as the source of the headless relative.
-First, the light-headed relative is derived from an existing light-headed relative, and the deletion of the light head is optional. Second, the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German, and the deletion of the light head is obligatory.
-I consider the first option first, and I give two reasons against it. I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
+First, the deletion of the light head is optional, and the light-headed relative is derived from an existing light-headed relative.
+Second, the deletion of the light head is obligatory, and the light-headed relative is derived from a light-headed relative that does not surfaces in Modern German.
+I consider the first option first, and I give two reasons against it.
+However, to identify the exact input structure, I take the light head from the existing light-headed relative as a point of departure, and I modify it in such a way that it is appropriate as a light head for a headless relative.
 
 I give an example of a Modern German light-headed relative in \ref{ex:mg-den-wen}.\footnote{
 Modern German also has another light-headed relative, in which the relative pronoun is the \tsc{d}-pronoun. I give an example in \ref{ex:mg-den-den}.
@@ -1416,6 +1447,8 @@ The light head in the \tit{den}-\tit{wen} relative is a demonstrative. A demonst
 Jan hugs \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs the man that he likes.'
 
+%move the contexts closer to the table and give the headless relative too. then in this part say why that is problematic with the demonstrative.
+
 The demonstrative \tit{den} in the \tit{den}-\tit{wen} relative refers back to the friend of Jan that he likes.
 
 Consider the context which facilitates a universal-interpretation and the repeated \tit{den}-\tit{wen} relative in \ref{ex:mg-context-univ}.
@@ -1431,9 +1464,11 @@ In this case, there is no antecedent for the demonstrative \tit{den} to refer ba
 % In footnote \ref{ftn:das-was}, I already briefly noted that not all speakers of Modern German accept \tit{den}-\tit{wen} relatives. Some of my informants reported that the meaning of the light head \tit{den} and relative pronoun \tit{wen} are incompatible for them. They prefer the \tsc{d}-pronoun as relative pronoun instead (as in \ref{ex:mg-den-den}).
 % That is why the relative pronoun \tit{den}, which also contains definiteness features, is a good match with a \tsc{d}-pronoun as a light head.
 
-I zoom in on the internal structure of the demonstrative \tit{den} to investigate what it is about the demonstrative that forces the definite-like interpretation. The demonstrative consists of the three morphemes \tit{d}, \tit{e} and \tit{n}. Two of its morphemes are identical to the \tsc{wh}-relative pronoun: (1) \tit{n}, which spells out pronominal, number, gender and case features, and (2) the \tit{e} which spells out deictic features. One morphemes differs: the \tit{d}, which establishes a definite reference. The two morphemes that force the definite-interpretation are the \tit{d} and the \tit{e}. The \tit{e} establishes a reference, and the \tit{d} makes this reference a definite one.
+I zoom in on the internal structure of the demonstrative \tit{den} to investigate what it is about the demonstrative that forces the definite-like interpretation. The demonstrative consists of the three morphemes \tit{d}, \tit{e} and \tit{n}. Two of its morphemes are identical to the \tsc{wh}-relative pronoun: (1) \tit{n}, which spells out pronominal, number, gender and case features, and (2) the \tit{e} which spells out deictic features. One morpheme differs: the \tit{d}, which establishes a definite reference. The two morphemes that force the definite-interpretation are the \tit{d} and the \tit{e}. The \tit{e} establishes a reference, and the \tit{d} makes this reference a definite one.
 
-I propose that the light head is the element that is left once the morphemes \tit{d} and \tit{e} are abandoned. This is the morpheme that is the final consonant of the relative pronoun.\footnote{
+% so, we have established that den-wen relative is not the input. Yet there must be SOME input structure, and so now we need to find out what it is. The intuition I follow is that this is a light headed relative whose head is even lighter than in the case of the den-wen relative.
+
+I propose that the light head is the element that is left once the morphemes \tit{d} and \tit{e} are absent. This is the morpheme that is the final consonant of the relative pronoun. I give the light-headed relative from which the \tit{wen}-relative is derived in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.\footnote{
 The two light heads I discuss resemble the strong and weak definite in \citet{schwarz2009}, at least morphologically (although my light head is always obligatorily deleted). \posscitet{schwarz2009} strong definite is anaphoric in nature, and the weak definite encodes uniqueness. I give an example of a strong definite in \ref{ex:mg-florian-strong}. The strong definite is \tit{dem} that precedes \tit{Freund} `friend'. It refers back to the linguistic antecedent \tit{einen Freund} `a friend'.
 
 \exg. Hans hat heute einen Freund zum Essen mit nach Hause gebracht. Er hat uns vorher ein Foto von dem Freund gezeigt.\\
@@ -1453,13 +1488,12 @@ Armstrong flew as {first one} {to the\scsub{weak}} moon\\
 The meaning of \posscitet{schwarz2009} strong definite seems similar to the meaning of the light head in the \tit{den}-\tit{wen} relative.
 I do not see right away how the light head in headless relatives could encode uniqueness. One possibility is that the feature content of his and my form differs slightly after all. Another possibility is that the fact that his form combines with a preposition and an overt nouns leads to a change in interpretation.
 }
-I give the light-headed relative from which the \tit{wen}-relative is derived in \ref{ex:mg-real-base}. The brackets around the light head indicate that it is obligatorily deleted.
 
 \exg. Jan umarmt [n] \tbf{wen} \tbf{er} \tbf{mag}.\\
 Jan hugs \tsc{lh}.\tsc{an}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs who he likes.'\label{ex:mg-real-base}
 
-In Section \ref{sec:basic-idea}, I gave the simplified structure of the light head, repeated here in \ref{ex:light-head-rep}.
+In Section \ref{ch:constituent-containment}, I gave the simplified structure of the light head, repeated here in \ref{ex:light-head-rep}.
 
 \ex.
 \begin{forest} boom
@@ -1476,7 +1510,7 @@ In Section \ref{sec:basic-idea}, I gave the simplified structure of the light he
 
 The idea was that the structures of the relative pronoun and the light heads match, but that the relative pronoun contains at least one feature more. I just argued that the light head has four feature less: \tsc{wh}, \tsc{rel}, \tsc{dx}\scsub{1} and \tsc{dx}\scsub{2}.
 
-I discuss two light heads: the animate nominative singular and in the animate accusative singular. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-mg}. I show them in \ref{ex:mg-lhs}.
+I discuss two light heads: the animate nominative singular and the animate accusative singular. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-mg}. I show them in \ref{ex:mg-lhs}.
 
 \ex.\label{ex:mg-lhs}
 \ag. r\\
@@ -1521,7 +1555,7 @@ I give the structures of the animate accusative singular light head in \ref{ex:f
 tikz={
 \node[label=below:\tit{n},
 draw,circle,
-scale=1,
+scale=0.95,
 fit to=tree]{};
 }
     [\ac{f}2]
@@ -1564,11 +1598,11 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
         \toprule
         \tsc{nom} extra light head \tit{r}\\
         \cmidrule{1-1}
-      \scriptsize{
       \begin{forest} boompje
         [\tsc{nom}P,
         tikz={
@@ -1598,13 +1632,12 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
             ]
         ]
       \end{forest}
-      }
       \\
       \toprule
       \tsc{nom} relative pronoun \tit{w-e-r}
       \\
       \cmidrule{1-1}
-      \scriptsize{
+      \begin{adjustbox}{max width=0.8\textwidth}
           \begin{forest} boompje
           [\tsc{rel}P
               [\tsc{rel}P
@@ -1643,10 +1676,11 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
               ]
           ]
         \end{forest}
-        }
+        \end{adjustbox}
         \\
       \bottomrule
   \end{tabular}
+  \end{adjustbox}
   \caption {Modern German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} → \tit{wer}}
   \label{fig:mg-int=ext}
 \end{figure}
@@ -1674,12 +1708,12 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
       \toprule
       \tsc{nom} extra light head \tit{r}
       \\
       \cmidrule{1-1}
-      \scriptsize{
       \begin{forest} boompje
         [\tsc{nom}P,
         tikz={
@@ -1709,13 +1743,11 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
             ]
         ]
       \end{forest}
-      }
       \\
       \toprule
       \tsc{acc} relative pronoun \tit{w-e-n}
       \\
       \cmidrule{1-1}
-      \scriptsize{
           \begin{forest} boompje
             [\tsc{rel}P
                 [\tsc{rel}P
@@ -1758,10 +1790,10 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
                 ]
             ]
         \end{forest}
-        }
         \\
       \bottomrule
   \end{tabular}
+  \end{adjustbox}
    \caption {Modern German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{acc} → \tit{wen}}
   \label{fig:mg-int-wins}
 \end{figure}
@@ -1795,11 +1827,11 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
         \toprule
         \tsc{acc} extra light head \tit{n} \\
         \cmidrule{1-1}
-      \scriptsize{
       \begin{forest} boompje
         [\tsc{acc}P,
         tikz={
@@ -1832,13 +1864,11 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
             ]
         ]
       \end{forest}
-      }
       \\
       \toprule
       \tsc{nom} relative pronoun \tit{w-e-r}
       \\
       \cmidrule{1-1}
-      \scriptsize{
       \begin{forest} boompje
         [\tsc{rel}P
             [\tsc{rel}P
@@ -1877,10 +1907,10 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
             ]
         ]
     \end{forest}
-        }
       \\
       \bottomrule
   \end{tabular}
+  \end{adjustbox}
    \caption {Modern German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} ↛ \tit{wer}/\tit{n}}
   \label{fig:mg-ext-wins}
 \end{figure}
@@ -1903,3 +1933,5 @@ Consider the middle constituent of the relative pronoun that spells out as \tit{
 The same hold for the left-most constituent of the relative pronoun that spells out as \tit{w} (\tsc{rel}P). The extra light head lacks the features \tsc{wh} and \tsc{rel} that form the \tsc{rel}P.
 The relative pronoun has constituents that are not constituents in the extra light head, so the relative pronoun cannot be absent.
 In sum, neither of the elements contains all constituents that the other element contains, and none of the elements can be absent, so none of them is marked gray.
+
+\section{Summary}
