basic idea pretty much there

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -15,7 +15,7 @@ Internal-only languages can be summarizes as in Table \ref{tbl:overview-rel-ligh
 internal-only   & relative pronoun\scsub{int} & *  & Modern German    \\
 \bottomrule
 \end{tabular}
-\label{tbl:overview-rel-light-mg}
+\label{tbl:overview-rel-light-mgx}
 \end{table}
 
 A language of the internal-only type (like Modern German) allows only the internal case to surface when it wins the case competition. This means that the relative pronoun with its internal case can be the surface pronoun. A language of this type does not allow the external case to surface when it wins the case competition. This means that the light head with its external case cannot be the surface pronoun. The goal of this section is to derive these properties from the way light heads and relative pronouns are spelled out in Modern German.
@@ -1637,7 +1637,6 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
       \tsc{nom} relative pronoun \tit{w-e-r}
       \\
       \cmidrule{1-1}
-      \begin{adjustbox}{max width=0.8\textwidth}
           \begin{forest} boompje
           [\tsc{rel}P
               [\tsc{rel}P
@@ -1676,7 +1675,6 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
               ]
           ]
         \end{forest}
-        \end{adjustbox}
         \\
       \bottomrule
   \end{tabular}
