--- a/thesis.tex
+++ b/thesis.tex
@@ -89,7 +89,7 @@ thanks
 \include{constituent-containment}
 \include{deriving-internalonly}
 \include{deriving-matching}
-\include{deriving-unrestricted}
+\include{discussing-unrestricted}
 \include{larger-syntax}
 
 \bookmarksetup{startatroot}
