--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -68,7 +68,7 @@ In this section I discuss the internal structure of relative pronoun in Polish h
  ]
 \end{forest}
 
-As I pointed out in Chapter \ref{sec:basic-idea}, I propose that the difference between Modern German and Polish headless relatives comes from whether the relative pronoun can delete the light head. This depends on whether the light head forms a constituent within the relative pronoun. That, in turn, depends on which constituents are formed to spell out the relative pronoun and the light head. The difference in spellout is the only difference between Modern German and Polish: the features that are spelled out are the same ones, namely the ones in \ref{ex:pol-fseq-rel}.
+As I pointed out in Chapter \ref{ch:constituent-containment}, I propose that the difference between Modern German and Polish headless relatives comes from whether the relative pronoun can delete the light head. This depends on whether the light head forms a constituent within the relative pronoun. That, in turn, depends on which constituents are formed to spell out the relative pronoun and the light head. The difference in spellout is the only difference between Modern German and Polish: the features that are spelled out are the same ones, namely the ones in \ref{ex:pol-fseq-rel}.
 
 I discuss two relative pronouns: the animate accusative singular and the animate dative singular. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-polish}. I show them in \ref{ex:pol-rels}.
 
@@ -82,7 +82,7 @@ I decompose the relative pronouns in three morphemes: the \tit{k}, the \tit{o} a
 
 \ex.
 \a.\label{ex:pol-spellout-rel-acc-preview}
-\tiny{
+\begin{adjustbox}{max width=0.8\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
@@ -142,9 +142,9 @@ I decompose the relative pronouns in three morphemes: the \tit{k}, the \tit{o} a
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 \b. \label{ex:pol-spellout-rel-dat-preview}
-\tiny{
+\begin{adjustbox}{max width=0.8\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
@@ -207,7 +207,7 @@ I decompose the relative pronouns in three morphemes: the \tit{k}, the \tit{o} a
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 I start with the morphemes \tit{go} and \tit{mu}. Consider the masculine and neuter personal pronouns in Table \ref{tbl:pol-prons}.\footnote{
 Polish has three types of third person pronouns \pgcitep{swan2002}{156-157}. Not all types of pronouns exist for all numbers and genders, but they do for the masculine accusative and dative singular.
@@ -529,7 +529,7 @@ Therefore, the \tsc{cl}P is spelled out as \tit{o}, shown in \ref{ex:pol-spellou
 \end{forest}
 
 The next feature in the functional sequence is the feature \tsc{ind}. This feature cannot be spelled out as the other ones before. The feature \tsc{ind} is merged, and a \tsc{ind}P is created. This syntactic structure does not form a constituent in the lexical tree in \ref{ex:pol-entry-e}. There is also no other lexical tree that contains the syntactic structure as a constituent.
-Therefore, there is no succesfull spellout for the syntactic structure in the derivational step in which the structure is spelled out as a single phrase (\ref{ex:spellout-algorithm-phrasal-rep} in the Spellout Algorithm, repeated from Chapter \ref{sec:deriving-only-internal}).
+Therefore, there is no succesfull spellout for the syntactic structure in the derivational step in which the structure is spelled out as a single phrase (\ref{ex:spellout-algorithm-phrasal-rep} in the Spellout Algorithm, repeated from Chapter \ref{ch:deriving-onlyinternal}).
 
 \ex. \tbf{Spellout Algorithm} (as in \citealt{caha2020a}, based on \citealt{starke2018})\label{ex:spellout-algorithm-rep}
  \a. Merge F and spell out.\label{ex:spellout-algorithm-phrasal-rep}
@@ -600,6 +600,7 @@ Therefore, in a second workspace, the feature \tsc{dx}\scsub{1} is merged with t
 Therefore, the \tsc{prox}P is spelled out as \tit{k}. The newly created phrase is merged as a whole with the already existing structure, and projects to the top node, as shown in \ref{ex:pol-spellout-proxp}.
 
 \ex.\label{ex:pol-spellout-proxp}
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boompje
   [\tsc{prox}P, s sep=25mm
       [\tsc{prox}P,
@@ -644,6 +645,7 @@ Therefore, the \tsc{prox}P is spelled out as \tit{k}. The newly created phrase i
       ]
   ]
 \end{forest}
+\end{adjustbox}
 
 The next feature in the functional sequence is the feature \tsc{dx}\scsub{2}. The derivation for this feature resembles the derivation of \tsc{dx}\scsub{2} in Modern German.
 The feature is merged with the existing syntactic structure, creating a \tsc{med}P.
@@ -686,7 +688,8 @@ The first movement option in the Spellout Algorithm is moving the specifier. In 
 This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-entry-go-rep1}, which corresponds to the \tit{go}.
 The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to the existing syntactic structure.
 
-\ex. \tiny{
+\ex.
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
@@ -746,7 +749,7 @@ The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to 
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 For the accusative relative pronoun, the last feature on the functional sequence is the feature \tsc{f}3. Its derivation preceeds the same as the one for the feature \tsc{f}2.
 The feature \tsc{f}3 is merged with the existing syntactic structure, creating a \tsc{dat}P.
@@ -776,7 +779,7 @@ This syntactic structure forms a constituent in the lexical tree in \ref{ex:pol-
 The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to the existing syntactic structure.
 
 \ex. \label{ex:pol-spellout-rel-dat}
-\tiny{
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boompje
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
@@ -839,7 +842,7 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 To summarize, I decomposed the relative pronoun into the three morphemes \tit{k}, \tit{o} and the suffix (\tit{go} and \tit{mu}). I showed which features each of the morphemes spells out, and in which constituents the features are combined. It is these constituents that determine whether the relative pronoun can delete the light head or not.
 
@@ -951,7 +954,7 @@ The feature \tsc{f}2 is merged with the \tsc{nom}P, forming an \tsc{acc}P. This 
 The accusative animate extra light head is shown in \ref{ex:pol-elh-acc}.
 
 \ex.\label{ex:pol-elh-acc}
-\small{
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
   [\tsc{dat}P, s sep=35mm
       [\tsc{an}P,
@@ -990,7 +993,7 @@ The accusative animate extra light head is shown in \ref{ex:pol-elh-acc}.
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 The dative animate extra light head is constructed as its accusative counterpart, except for that the feature \tsc{f}3 is added to create a dative.
 
@@ -999,7 +1002,7 @@ The feature \tsc{f}3 is merged with the \tsc{acc}P, forming an \tsc{dat}P. This 
 The dative animate extra light head is shown in \ref{ex:pol-elh-dat}.
 
 \ex.\label{ex:pol-elh-dat}.
-\small{
+\begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
   [\tsc{dat}P, s sep=40mm
       [\tsc{an}P,
@@ -1041,7 +1044,7 @@ The dative animate extra light head is shown in \ref{ex:pol-elh-dat}.
       ]
   ]
 \end{forest}
-}
+\end{adjustbox}
 
 So, the light-headed relative that headless relatives are derived from is:
 
@@ -1116,11 +1119,11 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
         \toprule
         \tsc{acc} extra light head \tit{} \\
         \cmidrule{1-1}
-        \small{
         \begin{forest} boom
           [\tsc{acc}P, s sep=35mm, tikz={
           \node[
@@ -1166,14 +1169,12 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
               ]
           ]
         \end{forest}
-        }
         \vspace{0.3cm}
       \\
       \toprule
       \tsc{acc} relative pronoun \tit{k-o-go}
       \\
       \cmidrule{1-1}
-      \small{
       \begin{forest} boompje
         [\tsc{rel}P, s sep=20mm
             [\tsc{rel}P
@@ -1223,11 +1224,11 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
             ]
         ]
       \end{forest}
-      }
       \vspace{0.3cm}
       \\
       \bottomrule
   \end{tabular}
+  \end{adjustbox}
    \caption {Polish \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{acc} → \tit{kogo}}
   \label{fig:polish-int=ext}
 \end{figure}
@@ -1259,11 +1260,11 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
         \toprule
         \tsc{acc} extra light head \tit{o-go} \\
         \cmidrule{1-1}
-        \small{
         \begin{forest} boom
           [\tsc{acc}P, s sep=37mm
               [\tsc{an}P,
@@ -1312,14 +1313,12 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
               ]
           ]
         \end{forest}
-        }
         \vspace{0.3cm}
       \\
       \toprule
       \tsc{acc} relative pronoun \tit{k-o-mu}
       \\
       \cmidrule{1-1}
-      \small{
       \begin{forest} boompje
         [\tsc{rel}P, s sep=15mm
             [\tsc{rel}P
@@ -1377,10 +1376,10 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
             ]
         ]
       \end{forest}
-      }
       \\
       \bottomrule
   \end{tabular}
+  \end{adjustbox}
    \caption {Polish \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{dat} ↛ \tit{ogo}/\tit{komu}}
   \label{fig:polish-int-wins}
 \end{figure}
@@ -1415,11 +1414,11 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
 
 \begin{figure}[htbp]
   \center
+  \begin{adjustbox}{max height=0.9\textheight}
   \begin{tabular}[b]{c}
         \toprule
         \tsc{dat} extra light head \tit{o-mu} \\
         \cmidrule{1-1}
-        \small{
         \begin{forest} boom
           [\tsc{dat}P, s sep=40mm
               [\tsc{an}P,
@@ -1473,14 +1472,12 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
               ]
           ]
         \end{forest}
-        }
         \vspace{0.3cm}
       \\
       \toprule
       \tsc{acc} relative pronoun \tit{k-o-go}
       \\
       \cmidrule{1-1}
-      \small{
       \begin{forest} boompje
         [\tsc{rel}P, s sep=15mm
             [\tsc{rel}P
@@ -1534,10 +1531,10 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
             ]
         ]
       \end{forest}
-      }
       \\
       \bottomrule
   \end{tabular}
+  \end{adjustbox}
    \caption {Polish \tsc{ext}\scsub{dat} vs. \tsc{int}\scsub{acc} ↛ \tit{omu}/\tit{kogo}}
   \label{fig:polish-ext-wins}
 \end{figure}
